--- a/Graphics/Graphics.vcxproj
+++ b/Graphics/Graphics.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="Controllers\FileController.h" />
     <ClInclude Include="Controllers\InputController.h" />
+    <ClInclude Include="Core\Matrix.h" />
     <ClInclude Include="DTOs\ParsedObjFile.h" />
     <ClInclude Include="Entities\Polygon.h" />
     <ClInclude Include="Entities\PolygonVertice.h" />
@@ -152,13 +153,14 @@
     <ClInclude Include="Extensions\StringExtensions.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Graphics.h" />
-    <ClInclude Include="Models\MainState.h" />
+    <ClInclude Include="Models\MainModel.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Controllers\FileController.cpp" />
     <ClCompile Include="Controllers\InputController.cpp" />
+    <ClCompile Include="Core\Matrix.cpp" />
     <ClCompile Include="Graphics.cpp" />
   </ItemGroup>
   <ItemGroup>
